# 36120_at3_group24_experiments

./: Makefile  README.md  pyproject.toml  requirements.txt
36120_at3_group24_experiments/: __init__.py  dataset.py  features.py  plots.py
36120_at3_group24_experiments/modeling/: predict.py  train.py
data/Ripple/: XRP_01_01_2015-01_01_2016_historical_data_coinmarketcap.csv  XRP_01_01_2016-01_01_2017_historical_data_coinmarketcap.csv  XRP_01_01_2017-01_01_2018_historical_data_coinmarketcap.csv  XRP_01_01_2018-01_01_2019_historical_data_coinmarketcap.csv  XRP_01_01_2019-01_01_2020_historical_data_coinmarketcap.csv  XRP_01_01_2020-01_01_2021_historical_data_coinmarketcap.csv  XRP_01_01_2021-01_01_2022_historical_data_coinmarketcap.csv  XRP_01_01_2022-01_01_2023_historical_data_coinmarketcap.csv  XRP_01_01_2023-01_01_2024_historical_data_coinmarketcap.csv  XRP_01_01_2024-01_01_2025_historical_data_coinmarketcap.csv
docs/: mkdocs.yml
docs/docs/: index.md
