[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "36120_at3_group24_experiments"
version = "0.0.1"
description = "This is a repository that will store the experiments conducted and the best model produced from the experiments"
authors = [
  { name = "Group24" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["36120_at3_group24_experiments"]
include = ["pyproject.toml", "36120_at3_group24_experiments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["36120_at3_group24_experiments"]
force-sort-within-sections = true

