[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "36120_at3_group24_experiments"
version = "0.0.1"
description = "This is a repository that will store the experiments conducted and the best model produced from the experiments"
authors = [
  { name = "Group24" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "scikit-learn (==1.5.1)",
    "pandas (==2.2.2)",
    "fastapi (==0.111.0)",
    "uvicorn (==0.30.1)",
    "joblib (==1.4.2)",
    "streamlit (==1.36.0)",
    "xgboost (==2.1.0)",
    "hyperopt (==0.2.7)",
    "lightgbm (==4.4.0)",
    "lime (==0.2.0.1)",
    "wandb (==0.17.4)",
    "jupyterlab (==4.2.3)",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["36120_at3_group24_experiments"]
include = ["pyproject.toml", "36120_at3_group24_experiments/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["36120_at3_group24_experiments"]
force-sort-within-sections = true

